fixing alignments

--- a/index.css
+++ b/index.css
@@ -47,7 +47,6 @@ h2 {
 
 p {
     color: #000000;
-    text-align: center;
     font-family: Arial, Helvetica, sans-serif;
 }
 
